Refactorizando la clase Pet